[gd_scene load_steps=4 format=3 uid="uid://bofack50w2ncn"]

[ext_resource type="Texture2D" uid="uid://bp65ekimrswq3" path="res://assets/relay_placeholder.png" id="1_4qw7h"]
[ext_resource type="Script" uid="uid://bbshymeemmvwh" path="res://hazards/sun_core_relays.gd" id="1_pcxc2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tqej"]
size = Vector2(240, 24)

[node name="SunCoreRelays" type="Node2D" groups=["hazard"]]
script = ExtResource("1_pcxc2")
beam_width = 24.0

[node name="Beam" type="Line2D" parent="."]
points = PackedVector2Array(-120, 0, 120, 0)
width = 24.0
default_color = Color(1, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="StartNode" type="Node2D" parent="."]
position = Vector2(-120, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="StartNode"]
texture = ExtResource("1_4qw7h")
metadata/_edit_lock_ = true

[node name="EndNode" type="Node2D" parent="."]
position = Vector2(120, 0)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="EndNode"]
texture = ExtResource("1_4qw7h")
metadata/_edit_lock_ = true

[node name="Collider" type="Area2D" parent="."]
collision_layer = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider" groups=["hazard"]]
shape = SubResource("RectangleShape2D_4tqej")
metadata/_edit_lock_ = true
